syntax = "proto3";

service GameService {
    rpc OpenSession(OpenSessionRequest) returns (OpenSessionResponse);
    rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);

    // Shop
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
    rpc PurchaseProduct(PurchaseProductRequest) returns (PurchaseProductResponse);

    // Table requests
    rpc CreateTable(CreateTableRequest) returns (CreateTableResponse);
    rpc GetOpenTables(GetOpenTablesRequest) returns (GetOpenTablesResponse);
    rpc JoinTable(JoinTableRequest) returns (JoinTableResponse);
    rpc BecomeParticipant(BecomeParticipantRequest) returns (BecomeParticipantResponse);
    rpc Ready(ReadyRequest) returns (ReadyResponse);
    rpc MakeMove(MakeMoveRequest) returns (MakeMoveResponse);
}

message OpenSessionRequest {
    string token = 1;
}

message OpenSessionResponse {
    string session_id = 1;
    Player player = 2;
    string table_id = 3;
}

message CloseSessionRequest {}
message CloseSessionResponse {
    string session_id = 1;
}

message ChangePasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message ChangePasswordResponse{}

// Shop

message GetProductsRequest{}
message GetProductsResponse{
    repeated Product products = 1;
}

message PurchaseProductRequest{
    string product_id = 1;
}
message PurchaseProductResponse{}

message Product {
    string id = 1;
    string title = 2;
    string description = 3;
    uint32 price = 4;
    string currency = 5;
}

message CreateTableRequest {
    string currency = 1;
    uint32 bet = 2;
}

message CreateTableResponse {
    string table_id = 1;
    string unit_type = 2;
    uint32 bet = 3;
}

message GetOpenTablesRequest {}
message GetOpenTablesResponse {
    repeated Table tables = 1;
}

message JoinTableRequest {
    string table_id = 1;
}

message JoinTableResponse {
    Table table = 1;
}

message BecomeParticipantRequest {
    string table_id = 1;
    string participant_id = 2;
}

message BecomeParticipantResponse {}

message ReadyRequest {
    string participant_id = 1;
}
message ReadyResponse {}

message MakeMoveRequest {
    string table_id = 1;
    string card = 2;
}

message MakeMoveResponse{}

message Participant {
    string id = 1;
    uint32 order = 2;
    string state = 3;
    string cards = 4;
    uint32 cards_count = 5;
    Player player = 6;
}

message Table {
    string id = 1;
    string trump = 2;
    uint32 turn = 3;
	string table_cards = 4;
	uint32 club_player = 5;
	uint32 dealer = 6;
    uint32 team_1_score = 7;
	uint32 team_2_score = 8;
	uint32 team_1_total = 9;
	uint32 team_2_total = 10;
	repeated Participant participants = 11;
    uint32 bet = 12;
    string unit_type= 13;
}

message Player {
    string id = 1;
    string nickname = 2;
    uint64 level = 3;
    uint32 exp = 4;
    uint64 nuts = 5;
    uint64 gold = 6;
    string avatar = 7;
    Profile profile = 8;
}

message Profile {
    string first_name = 1;
    string last_name = 2;
    uint32 age = 3;
    string gender = 4;
    string country = 5;
    string language = 6;
}